created the form and started styling

--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <title></title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <title>Register with us</title>
   </head>
   <body>
-
+    <div class="card">
+      <h1 class="l-heading">Register With Us</h1>
+      <form class="web-form" action="index.html" method="post">
+        <div class="form-control">
+          <label for="Firstname">FirstName:</label><br>
+          <input id="firstName" type="text" name="Firstname" value="" placeholder="Enter your name">
+          <small>error message</small>
+        </div>
+        <div class="form-control">
+          <label for="Firstname">Surname:</label><br>
+          <input id="surName" type="text" name="SurName" value="" placeholder="Enter your Surname">
+          <small>error message</small>
+        </div>
+        <div class="form-control">
+          <label for="Firstname">Email:</label><br>
+          <input id="email" type="email" name="" value="" placeholder="Enter your Email address">
+          <small>error message</small>
+        </div>
+        <div class="form-control">
+          <label for="Firstname">Password:</label><br>
+          <input id="password" type="password" name="Password" value="" placeholder="Create a password">
+          <small>error message</small>
+        </div>
+        <div class="form-control">
+          <label for="Firstname">Confirm Password:</label><br>
+          <input id="cpassword" type="password" name="confirm-password" value="" placeholder="Confirm your password">
+          <small>error message</small>
+        </div>
+        <input class="btn" type="submit" name="" value="Submit">
+      </form>
+    </div>
   </body>
 </html>
