started created checks for form

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       <h1 class="l-heading">Register With Us</h1>
       <form class="web-form" action="index.html" method="post">
         <div class="form-control">
-          <label for="Firstname">FirstName:</label><br>
-          <input id="firstName" type="text" name="Firstname" value="" placeholder="Enter your name">
+          <label for="Firstname">First Name:</label><br>
+          <input id="firstname" type="text" name="Firstname" value="" placeholder="Enter your name">
           <small>error message</small>
         </div>
         <div class="form-control">
           <label for="Firstname">Surname:</label><br>
-          <input id="surName" type="text" name="SurName" value="" placeholder="Enter your Surname">
+          <input id="surname" type="text" name="SurName" value="" placeholder="Enter your Surname">
           <small>error message</small>
         </div>
         <div class="form-control">
@@ -38,5 +38,6 @@
         <input class="btn" type="submit" name="" value="Submit">
       </form>
     </div>
+    <script src="app.js" charset="utf-8"></script>
   </body>
 </html>
